@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>Logger-Bungeecord</artifactId>
-    <version>1.8.1</version>
+    <version>1.8</version>
     <packaging>jar</packaging>
 
     <name>Logger-BungeeCord</name>
@@ -153,6 +153,11 @@
             <groupId>me.prism3.loggercore</groupId>
             <artifactId>Logger-Core</artifactId>
             <version>1.8.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20220924</version>
         </dependency>
     </dependencies>
 </project>
