@@ -68,7 +68,7 @@
         <dependency>
             <groupId>me.prism3</groupId>
             <artifactId>Logger-Bungeecord</artifactId>
-            <version>1.8.1</version>
+            <version>1.8</version>
         </dependency>
         <dependency>
             <groupId>me.prism3</groupId>
