@@ -251,5 +251,10 @@
             <artifactId>Logger-Core</artifactId>
             <version>1.8.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20220924</version>
+        </dependency>
     </dependencies>
 </project>
